Prueba cambio de formato imagen

--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -1,6 +1,6 @@
         <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block" style="width: 14rem;">
             <div class="flex items-center justify-center mb-8">
-                <img src="/Complementos/JB-CONSTRUCTORES.png" alt="Logo JB Constructores" 
+                <img src="/Complementos/favicon.ico" alt="Logo JB Constructores" 
                     class="h-10" style="border-radius:20px; width: 180px; height: 180px;">
             </div>
             
