--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -6,7 +6,7 @@
             
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-                <a href="/index.html" class="block px-4 py-2 bg-red-800 rounded-lg">
+                <a href="index.html" class="block px-4 py-2 bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Inicio</span>
                     </div>
