--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -1,6 +1,6 @@
         <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block" style="width: 14rem;">
             <div class="flex items-center justify-center mb-8">
-                <img src="/Complementos/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES" 
+                <img src="JB-CONSTRUCTORES/Complementos/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES" 
                     class="h-10" style="border-radius:20px; width: 180px; height: 180px;">
             </div>
             
@@ -20,24 +20,24 @@
                         <span>Portafolio</span>
                     </div>
                 </a>
-                <a href="../Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Blogs</span>
                     </div>
                 </a>
-                <a href="../Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Cotizaciones</span>
                     </div>
                 </a>
-                <a href="../Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Mensajes</span>
                     </div>
                 </a>
 
                 <!-- ESTA PAGINA SE DEBE CAMBIAR PARA QUE LOS DEMAS USUARIOS VENA LAS RESEÑAS PUBLICADAS -->
-                 <a href="../Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                 <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
@@ -47,10 +47,9 @@
 
             <!-- USUARIO REGISTRADO -->
 
-            <!-- 
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Usuario Registrado</div>
-                <a href="../Paginas/cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="Paginas/cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Mis Cotizaciones</span>
                     </div>
@@ -58,36 +57,34 @@
 
 
                 <!-- ESTA PAGINA DEBE SER PARA QUE LOS USUARIOS REGISTRADOS PUBLIQUEN SUS CALIFICACIONES DEL SERVICIO-->
-            <!--
-                <a href="resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+
+                <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
                 </a>
-                <a href="../Paginas/progresoObra.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="Paginas/progresoObra.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Avance de Obra</span>
                     </div>
                 </a>
             </div>
-            -->
 
             <!-- ADMINISTRADOR -->
 
-            <!-- 
+
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-                <a href="../Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Gestionar Proyectos</span>
                     </div>
                 </a>
-                <a href="../Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Moderación de Reseñas</span>
                     </div>
                 </a>
 
             </div>
-            -->
         </div>
