--- a/Paginas/blogs.html
+++ b/Paginas/blogs.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs - JB Constructores</title>
+    <title>Blogs</title>
+    <base href="/JB-CONSTRUCCIONES/">
     <link rel="icon" href="../Complementos/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
