--- a/Paginas/gestionProyectos.html
+++ b/Paginas/gestionProyectos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Proyectos</title>
+    <base href="/JB-CONSTRUCCIONES/">
     <link rel="icon" href="Complementos/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
