--- a/Paginas/nuevoProyecto.html
+++ b/Paginas/nuevoProyecto.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avance de Obra - JB Constructores</title>
+    <title>Avance de Obra</title>
+    <base href="/JB-CONSTRUCCIONES/">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
