Ajustes de sidebar

--- a/cotizacion.html
+++ b/cotizacion.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Cotización - JB Constructores</title>
+<title>Cotización</title>
+<base href="/JB-CONSTRUCCIONES/">
 <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
 <link href="./assets/css/style.css" rel="stylesheet" />
+<link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./assets/css/sidebar.css" />
 </head>
 <body class="bg-gray-50 font-sans">
 
