--- a/Paginas/blogs.html
+++ b/Paginas/blogs.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="../Complementos/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/sidebar.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
