--- a/Paginas/moderacionResenas.html
+++ b/Paginas/moderacionResenas.html
@@ -6,6 +6,8 @@
     <title>Avance de Obra - JB Constructores</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/sidebar.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
