--- a/Paginas/nuevoProyecto.html
+++ b/Paginas/nuevoProyecto.html
@@ -7,6 +7,8 @@
     <base href="/JB-CONSTRUCCIONES/">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/sidebar.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
