Organizacion de estructura

--- a/Paginas/gestionProyectos.html
+++ b/Paginas/gestionProyectos.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Proyectos</title>
-    <base href="/JB-CONSTRUCCIONES/">
-    <link rel="icon" href="Complementos/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/sidebar.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -93,7 +91,7 @@
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">Gestión de Proyectos</h1>
                     <button class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700"
-                        onclick="window.location.href='nuevoProyecto.html'">
+                        onclick="window.location.href='Paginas/nuevoProyecto.html'">
                         + Nuevo Proyecto
                     </button>
                 </div>
@@ -203,5 +201,6 @@
             </main>
         </div>
     </div>
+    <script src="Scripts/main.js"></script>
 </body>
 </html>
