--- a/cotizacion.html
+++ b/cotizacion.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Cotización</title>
+<link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
 <base href="/JB-CONSTRUCCIONES/">
 <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
 <link href="./assets/css/style.css" rel="stylesheet" />
 <link rel="stylesheet" href="./assets/css/style.css" />
-<link rel="stylesheet" href="./assets/css/sidebar.css" />
 </head>
 <body class="bg-gray-50 font-sans">
 
