--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -1,12 +1,22 @@
+        <!DOCTYPE html>
+        <html lang="es">   
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>JB-CONSTRUCTORES</title>
+            <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+            <link rel="stylesheet" href="../assets/css/style.css">
+            <script src="https://cdn.tailwindcss.com"></script>
+        </head>
         <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block" style="width: 14rem;">
             <div class="flex items-center justify-center mb-8">
-                <img src="JB-CONSTRUCTORES/Complementos/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES" 
+                <img src="../assets/img/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES" 
                     class="h-10" style="border-radius:20px; width: 180px; height: 180px;">
             </div>
             
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-                <a href="/index.html" class="block px-4 py-2 bg-red-800 rounded-lg">
+                <a href="../index.html" class="block px-4 py-2 bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Inicio</span>
                     </div>
@@ -15,29 +25,29 @@
             
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-                <a href="Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Portafolio</span>
                     </div>
                 </a>
-                <a href="Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Blogs</span>
                     </div>
                 </a>
-                <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Cotizaciones</span>
                     </div>
                 </a>
-                <a href="Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Mensajes</span>
                     </div>
                 </a>
 
-                <!-- ESTA PAGINA SE DEBE CAMBIAR PARA QUE LOS DEMAS USUARIOS VENA LAS RESEÑAS PUBLICADAS -->
-                 <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <!-- ESTA PAGINA SE DEBE CAMBIAR PARA QUE LOS DEMAS USUARIOS VEAN LAS RESEÑAS PUBLICADAS -->
+                 <a href="../Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
@@ -49,7 +59,7 @@
 
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Usuario Registrado</div>
-                <a href="Paginas/cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Mis Cotizaciones</span>
                     </div>
@@ -58,12 +68,12 @@
 
                 <!-- ESTA PAGINA DEBE SER PARA QUE LOS USUARIOS REGISTRADOS PUBLIQUEN SUS CALIFICACIONES DEL SERVICIO-->
 
-                <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
                 </a>
-                <a href="Paginas/progresoObra.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/progresoObra.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Avance de Obra</span>
                     </div>
@@ -75,12 +85,12 @@
 
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-                <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Gestionar Proyectos</span>
                     </div>
                 </a>
-                <a href="Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="../Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Moderación de Reseñas</span>
                     </div>
@@ -88,3 +98,4 @@
 
             </div>
         </div>
+        </html>
