--- a/Paginas/portafolio.html
+++ b/Paginas/portafolio.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <base href="/JB-CONSTRUCCIONES/">
-    <link rel="icon" href="Complementos/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/sidebar.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -28,7 +26,7 @@
                 </div>
             </header>
             
-            <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
+            <main class="flex-1 overflow-y-auto p-6 bg-gray-100" style="margin: 0;">
                 <div class="mb-6">
                     <h2 class="text-2xl font-semibold text-gray-800">Nuestros Proyectos</h2>
                     <p class="text-gray-600">Aquí puedes ver algunos de nuestros trabajos más destacados.</p>
@@ -84,6 +82,7 @@
             </main>
         </div>
     </div>
-<script src="../Scripts/main.js"></script> 
+<script src="../Scripts/main.js"></script>
+
 </body>
 </html>
