--- a/Paginas/resenas.html
+++ b/Paginas/resenas.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reseñas y Calificaciones</title>
-    <base href="/JB-CONSTRUCCIONES/">
+    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="Complementos/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/sidebar.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
