--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JB Constructores - Construcción y Mantenimiento</title>
-    <link rel="icon" href="Complementos/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/sidebar.css" />
     <style>
       body {
         font-family: "Roboto", sans-serif;
@@ -52,52 +51,40 @@
     <div id="sidebar-container"></div> <!-- Sidebar cargado con JS -->
 
     <!-- Main content -->
-    <div class="flex-1 flex flex-col overflow-hidden">
+    <div class="flex-1 flex flex-col overflow-hidden h-full">
       <!-- Header -->
-      <header class="bg-white shadow-sm">
-        <div class="flex items-center justify-between px-6 py-4">
-          <h1 class="text-xl font-semibold text-gray-800">JB Constructores</h1>
-          <div class="flex items-center space-x-4">
-            <button class="relative text-gray-500 hover:text-gray-700">
-              <span
-                class="absolute top-0 right-0 h-2 w-2 rounded-full bg-red-500"
-              ></span>
-            </button>
-            <div class="relative">
-              <button class="flex items-center space-x-2 focus:outline-none">
-                <span class="text-gray-700">Usuario</span>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-4 w-4 text-gray-500"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M19 9l-7 7-7-7"
-                  />
-                </svg>
-              </button>
-            </div>
-          </div>
-        </div>
-      </header>
+<header class="bg-white shadow-sm">
+  <div class="px-6 py-4">
+    <!-- Encabezado -->
+    <div class="flex items-center justify-between mb-2">
+      <div>
+        <h1 class="text-2xl font-bold text-gray-800">JB-CONSTRUCCIONES</h1>
+        <p class="text-gray-600 text-sm">
+          Soluciones de obra civil con calidad, seguridad y cumplimiento. Elije el servicio que necesitas.
+        </p>
+      </div>
+      <!-- Botones -->
+      <div class="flex items-center space-x-2">
+        <button onclick="window.location.href='Paginas/inicioSesion.html'" class="px-3 py-1 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition duration-200" 
+          style="white-space: nowrap; min-width: 100px;">Iniciar sesión</button>
+        <button onclick="window.location.href='Paginas/registro.html'" class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700 transition duration-200">Registrarse</button>
+
+      </div>
+    </div>
+  </div>
+</header>
 
       <!-- Navegación pestañas -->
       <nav class="tabs px-6">
         <button class="active" data-tab="obra-negra">Obra Negra</button>
         <button data-tab="obra-blanca">Obra Blanca</button>
         <button data-tab="mantenimiento">Mantenimiento</button>
+        
       </nav>
 
       <!-- Main content area -->
       <main
-        class="flex-1 overflow-y-auto px-6 pb-6"
-        style="background-color: rgba(34, 104, 77, 0.1);"
-      >
+        class="flex-1 overflow-y-auto px-6 pb-6">
         <!-- Secciones ocultas/visibles según pestaña -->
         <section id="obra-negra" class="tab-content">
           <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
