imagenes obra blanca

--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -16,7 +16,7 @@
             
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-                <a href="/index.html" class="block px-4 py-2 bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/index.html" class="block px-4 py-2 bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Inicio</span>
                     </div>
@@ -25,29 +25,29 @@
             
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-                <a href="../Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Portafolio</span>
                     </div>
                 </a>
-                <a href="../Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Blogs</span>
                     </div>
                 </a>
-                <a href="../Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Cotizaciones</span>
                     </div>
                 </a>
-                <a href="../Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Mensajes</span>
                     </div>
                 </a>
 
                 <!-- ESTA PAGINA SE DEBE CAMBIAR PARA QUE LOS DEMAS USUARIOS VEAN LAS RESEÑAS PUBLICADAS -->
-                 <a href="../Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                 <a href="JB-CONSTRUCCIONES/Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
@@ -59,7 +59,7 @@
 
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Usuario Registrado</div>
-                <a href="../Paginas/cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Mis Cotizaciones</span>
                     </div>
@@ -68,12 +68,12 @@
 
                 <!-- ESTA PAGINA DEBE SER PARA QUE LOS USUARIOS REGISTRADOS PUBLIQUEN SUS CALIFICACIONES DEL SERVICIO-->
 
-                <a href="../Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
                 </a>
-                <a href="../Paginas/progresoObra.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/progresoObra.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Avance de Obra</span>
                     </div>
@@ -85,12 +85,12 @@
 
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-                <a href="../Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Gestionar Proyectos</span>
                     </div>
                 </a>
-                <a href="../Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Moderación de Reseñas</span>
                     </div>
