Ajustes de sidebar

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       <!-- Navegación pestañas -->
       <nav class="tabs px-6" style="margin-top: 1rem; font-size: 17px;">
         <button class="active" data-tab="obra-negra">Obra Negra</button>
-        <button data-tab="obra-blanca">Obra Blanca</button>
-        <button data-tab="mantenimiento">Mantenimiento</button>
+        <button class="active" data-tab="obra-blanca">Obra Blanca</button>
+        <button class="active" data-tab="mantenimiento">Mantenimiento</button>
       </nav>
 
       <!-- Main content area -->
