--- a/Paginas/gestionProyectos.html
+++ b/Paginas/gestionProyectos.html
@@ -15,75 +15,9 @@
     </style>
 </head>
 <body class="bg-gray-50">
-    <!-- Sidebar -->
-    <div class="flex h-screen">
-        <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block">
-            <div class="flex items-center justify-center mb-8">
-                <img src="https://example.com/logo.png" alt="Logo JB Constructores" class="h-10">
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-                <a href="index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Inicio</span>
-                    </div>
-                </a>
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-                <a href="portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Portafolio</span>
-                    </div>
-                </a>
-                <a href="blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Blogs</span>
-                    </div>
-                </a>
-                <a href="simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Simulador de Cotizaciones</span>
-                    </div>
-                </a>
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Usuario Registrado</div>
-                <a href="mis_cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Mis Cotizaciones</span>
-                    </div>
-                </a>
-                <a href="resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Reseñas y Calificaciones</span>
-                    </div>
-                </a>
-                <a href="progresoObra.html" class="block px-4 py-2 bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Avance de Obra</span>
-                    </div>
-                </a>
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-                <a href="gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Gestionar Proyectos</span>
-                    </div>
-                </a>
-                <a href="moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Moderación de Reseñas</span>
-                    </div>
-                </a>
-                <a href="mensajes.html" class="block px-4 py-2 bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Mensajes</span>
-                    </div>
-                </a>
-            </div>
-        </div>
+        <body class="bg-gray-50">
+        <div class="flex h-screen">
+        <div id="sidebar-container"></div> <!-- Aquí insertamos el sidebar -->
         
         <!-- Main content -->
         <div class="flex-1 flex flex-col overflow-hidden">
@@ -91,7 +25,7 @@
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">Gestión de Proyectos</h1>
                     <button class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700"
-                        onclick="window.location.href='Paginas/nuevoProyecto.html'">
+                        onclick="window.location.href='nuevoProyecto.html'">
                         + Nuevo Proyecto
                     </button>
                 </div>
@@ -166,41 +100,11 @@
                                     </button>
                                 </div>
                             </div>
-                            <!-- More messages -->
-                        </div>
-                    </div>
-                    
-                    </div>
-                <!-- Paginación -->
-                <div class="mt-6 flex justify-between items-center">
-                    <div class="px-6 py-4 border-b border-gray-200">
-                        <h3 class="text-lg font-medium text-gray-800">Enviar Nuevo Mensaje</h3>
-                    </div>
-                    <div class="p-4">
-                        <form>
-                            <div class="mb-4">
-                                <label class="block text-gray-700 mb-2">Asunto</label>
-                                <input type="text" class="w-full border rounded-md p-2">
-                            </div>
-                            <div class="mb-4">
-                                <label class="block text-gray-700 mb-2">Mensaje</label>
-                                <textarea rows="4" class="w-full border rounded-md p-2"></textarea>
-                            </div>
-                            <button type="submit" class="bg-red-600 text-white py-2 px-4 rounded-md hover:bg-red-700">
-                                Enviar Mensaje
-                            </button>
-                        <span class="text-sm text-gray-600">Mostrando 1 a 8 de 24 proyectos</span>
-                    <div class="flex space-x-2">
-                        <button class="px-3 py-1 border rounded-md">Anterior</button>
-                        <button class="px-3 py-1 bg-red-600 text-white rounded-md">1</button>
-                        <button class="px-3 py-1 border rounded-md">2</button>
-                        <button class="px-3 py-1 border rounded-md">3</button>
-                        <button class="px-3 py-1 border rounded-md">Siguiente</button>
-                    </div>
+                      </div>    
                 </div>
             </main>
         </div>
     </div>
-    <script src="Scripts/main.js"></script>
+    <script src="../Scripts/main.js"></script>
 </body>
 </html>
