--- a/Paginas/progresoObra.html
+++ b/Paginas/progresoObra.html
@@ -17,82 +17,9 @@
 </head>
 <body class="bg-gray-50">
     <!-- Sidebar -->
-    <div class="flex h-screen">
-        <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block">
-            <div class="flex items-center justify-center mb-8">
-                <img src="https://example.com/logo.png" alt="Logo JB Constructores" class="h-10">
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-                <a href="index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Inicio</span>
-                    </div>
-                </a>
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-                <a href="portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Portafolio</span>
-                    </div>
-                </a>
-                <a href="blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Blogs</span>
-                    </div>
-                </a>
-                <a href="simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Simulador de Cotizaciones</span>
-                    </div>
-                </a>
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Usuario Registrado</div>
-                <a href="cotizaciones.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Mis Cotizaciones</span>
-                    </div>
-                </a>
-                <a href="resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Reseñas y Calificaciones</span>
-                    </div>
-                </a>
-                <a href="progresoObra.html" class="block px-4 py-2 bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Avance de Obra</span>
-                    </div>
-                </a>
-            </div>
-            <div class="space-y-1 mb-8">
-                <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-                <a href="gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Gestionar Proyectos</span>
-                    </div>
-                </a>
-                <a href="moderacionReseñas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Moderación de Reseñas</span>
-                    </div>
-                </a>
-                <a href="mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
-                    <div class="flex items-center space-x-3">
-                        <span>Mensajes</span>
-                    </div>
-                </a>
-            </div>
-        </div>
-        
+        <div class="flex h-screen">
+        <div id="sidebar-container"></div> <!-- Aquí insertamos el sidebar -->
         <!-- Main content -->
-        <div class="flex-1 flex flex-col overflow-hidden">
-            <header class="bg-white shadow-sm">
-                <div class="flex items-center justify-between px-6 py-4">
-                    <h1 class="text-xl font-semibold text-gray-800">Avance de Obra</h1>
-                </div>
-            </header>
             
             <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
                 <div class="mb-6">
@@ -121,6 +48,6 @@
             </main>
         </div>
     </div>
-    <script src="Scripts/main.js"></script>
+    <script src="../Scripts/main.js"></script>
 </body>
 </html>
