--- a/Paginas/simulador.html
+++ b/Paginas/simulador.html
@@ -22,7 +22,7 @@
         <div class="flex-1 flex flex-col overflow-hidden">
             <header class="bg-white shadow-sm">
             <div class="flex items-center justify-between px-6 py-4">
-                <h1 class="text-xl font-semibold text-gray-800">MARCACIÓN TERRENO</h1>
+                <h1 class="text-xl font-semibold text-gray-800">SIMULA TU COTIZACIÓN</h1>
             </div>
             </header>
             <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
