--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -11,12 +11,12 @@
         </head>
         <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block " style="width: 14rem; background-color: rgb(6, 30, 23);">
             <div class="flex items-center justify-center mb-8">
-                <img src="../assets/img/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES" 
+                <img src="JB-CONSTRUCCIONES/assets/img/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES" 
                     class="h-10" style="border-radius:20px; width: 180px; height: 180px;">
             </div>          
             <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2"></div>
-                <a href="/index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Inicio</span>
                     </div>
@@ -24,35 +24,35 @@
             </div>
 
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2" style="font-size: 14px;">Servicios</div>
-                <a href="/Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Portafolio</span>
                     </div>
                 </a>
-                <a href="/Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Blogs</span>
                     </div>
                 </a>
-                <a href="/Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Cotizaciones</span>
                     </div>
                 </a>
-                <a href="/Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Mensajes</span>
                     </div>
                 </a>
 
                 <!-- ESTA PAGINA SE DEBE CAMBIAR PARA QUE LOS DEMAS USUARIOS VEAN LAS RESEÑAS PUBLICADAS -->
-                 <a href="/Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                 <a href="JB-CONSTRUCCIONES/Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
                 </a>
-            </div>
-            </div>
+            
+
 
 
             <!-- USUARIO REGISTRADO -->
@@ -84,21 +84,17 @@
 
             <!-- ADMINISTRADOR -->
 
-            <!--
-            <div class="space-y-1 mb-8">
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-                <a href="/Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Gestionar Proyectos</span>
                     </div>
 
                 </a>
-                <a href="/Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                <a href="JB-CONSTRUCCIONES/Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Moderación de Reseñas</span>
                     </div>
                 </a>
-                
-            </div>   
-        </div> -->
+        </div>
         </html>
