--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -46,7 +46,7 @@
                 </a>
 
                 <!-- ESTA PAGINA SE DEBE CAMBIAR PARA QUE LOS DEMAS USUARIOS VEAN LAS RESEÑAS PUBLICADAS -->
-                 <a href="JB-CONSTRUCCIONES/Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
+                 <a href="/JB-CONSTRUCCIONES/Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
                     <div class="flex items-center space-x-3">
                         <span>Reseñas y Calificaciones</span>
                     </div>
@@ -82,7 +82,7 @@
                 </a>
             </div>
 
-            <!-- ADMINISTRADOR -->
+        ADMINISTRADOR -->
 
                 <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
                 <a href="JB-CONSTRUCCIONES/Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">
