--- a/Paginas/inicioSesion.html
+++ b/Paginas/inicioSesion.html
@@ -3,59 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
-    <base href="/JB-CONSTRUCCIONES/">
+    <title>Iniciar Sesión - JB Constructores</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
         }
+
+        /* Animación de fade-in */
+        .fade-in {
+            animation: fadeIn 1s ease forwards;
+            opacity: 0;
+        }
+        @keyframes fadeIn {
+            to { opacity: 1; }
+        }
+
+        .logo-bg:hover {
+            transform: translateY(-5px);
+        }
+
+        /* Inputs y botón personalizados */
+        input:focus {
+            outline: none;
+            box-shadow: 0 0 8px rgba(30, 120, 90, 0.5);
+        }
+
+        button:focus {
+            outline: none;
+            box-shadow: 0 0 8px rgba(30, 120, 90, 0.5);
+        }
     </style>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center relative">
-    <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
-  ☰
-</button>
+<body class="min-h-screen flex items-center justify-center px-4 bg-gradient-to-b from-green-100 via-blue-50 to-blue-100">
 
-    <main class="flex-1 overflow-y-auto p-6 bg-gray-100 w-full flex items-center justify-center relative z-10">
-        <div class="w-full">
-            <div class="mb-6">
-                <p class="text-gray-600 text-center" style="font-size: 20px; color:rgb(178, 19, 19);">Ingrese sus credenciales para acceder</p><br>
+    <!-- Formulario flotante -->
+    <div class="relative max-w-sm w-full bg-white rounded-3xl shadow-2xl p-10 fade-in overflow-hidden">
+
+        <!-- Logo integrado en el fondo -->
+        <div class="logo-bg"></div>
+
+        <h2 class="text-center text-2xl font-bold text-green-800 mb-6 z-10 relative">Iniciar Sesión</h2>
+        <p class="text-center text-gray-600 mb-8 z-10 relative">Ingrese sus credenciales para acceder</p>
+
+        <form action="#" method="post" autocomplete="off" class="relative z-10">
+            <div class="mb-5">
+                <label class="block text-gray-700 font-medium mb-2" for="usuario">Nombre de Usuario</label>
+                <input type="text" id="usuario" name="usuario"
+                    class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition"
+                    required autocomplete="username">
             </div>
-            <div class="bg-white rounded-lg shadow p-6 max-w-md mx-auto">
-                <form action="#" method="post" autocomplete="off">
-                    <div>
-                        <label class="block text-gray-700 mb-2" for="usuario">Nombre de Usuario</label>
-                        <input type="text" id="usuario" name="usuario" class="w-full border rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-red-600" required autocomplete="username">
-                    </div>
-                    <div class="mt-4">
-                        <label class="block text-gray-700 mb-2" for="contrasena">Contraseña</label>
-                        <input type="password" id="contrasena" name="contrasena" class="w-full border rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-red-600" required autocomplete="current-password">
-                    </div>
-                    <div class="flex items-center justify-between mt-2">
-                        <label class="flex items-center">
-                            <input type="checkbox" id="recordarme" name="recordarme" class="rounded border-gray-300 text-red-600 focus:ring-red-600">
-                            <span class="ml-2 text-gray-700">Recordarme</span>
-                        </label>
-                        <a href="registro.html" class="text-sm text-red-600 hover:text-red-800">
-                            ¿Olvidó su contraseña?
-                        </a>
-                    </div>
-                    <div class="mt-6">
-                        <button type="submit" class="w-full bg-red-600 text-white py-2 px-6 rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-600">
-                            Iniciar Sesión
-                        </button>
-                    </div>
-                    <div class="mt-4 text-center">
-                        <p class="text-gray-600">¿No tienes una cuenta?</p>
-                        <a href="registro.html" class="text-red-600 hover:text-red-800 font-medium">
-                            Regístrate aquí
-                        </a>
-                    </div>
-                </form>
+
+            <div class="mb-5">
+                <label class="block text-gray-700 font-medium mb-2" for="contrasena">Contraseña</label>
+                <input type="password" id="contrasena" name="contrasena"
+                    class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition"
+                    required autocomplete="current-password">
             </div>
-        </div>
-    </main>
+
+            <div class="flex items-center justify-between mb-6">
+                <label class="flex items-center text-gray-700">
+                    <input type="checkbox" id="recordarme" name="recordarme"
+                        class="rounded border-gray-300 text-green-500 focus:ring-green-500">
+                    <span class="ml-2">Recordarme</span>
+                </label>
+                <a href="registro.html" class="text-green-700 hover:text-green-900 text-sm font-medium">
+                    ¿Olvidó su contraseña?
+                </a>
+            </div>
+
+            <button type="submit"
+                class="w-full bg-green-600 hover:bg-blue-600 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105">
+                Iniciar Sesión
+            </button>
+
+            <div class="mt-6 text-center">
+                <p class="text-gray-600 mb-2">¿No tienes una cuenta?</p>
+                <a href="registro.html" class="text-green-700 hover:text-blue-700 font-medium">Regístrate aquí</a>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
