--- a/Paginas/registro.html
+++ b/Paginas/registro.html
@@ -3,87 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
-    <base href="/JB-CONSTRUCCIONES/">
+    <title>Registro - JB Constructores</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-
     <style>
         body {
             font-family: 'Roboto', sans-serif;
         }
+
+        /* Animación de fade-in */
+        .fade-in {
+            animation: fadeIn 1s ease forwards;
+            opacity: 0;
+        }
+        @keyframes fadeIn {
+            to { opacity: 1; }
+        }
+       
+        input:focus, select:focus {
+            outline: none;
+            box-shadow: 0 0 8px rgba(30, 120, 90, 0.5);
+        }
+
+        button:focus {
+            outline: none;
+            box-shadow: 0 0 8px rgba(30, 120, 90, 0.5);
+        }
     </style>
 </head>
-<body class="bg-gray-50 relative">
-  </button>
-        <div class="flex h-screen">
-            <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
-                ☰
-            </button>
-            
-            <!-- Main content -->
-    <main class="flex-1 overflow-y-auto p-6 bg-gray-100 relative z-10">
-        <div class="mb-6 flex flex-col items-center justify-center text-center">
-            <h2 class="text-2xl font-semibold text-gray-800">Registro de Usuario</h2>
-            <p class="text-gray-600">Complete sus datos para registrarse</p>
-        </div>
+<body class="min-h-screen flex items-center justify-center px-4 bg-gradient-to-b from-green-100 via-blue-50 to-blue-100">
 
-        <div class="bg-white rounded-lg shadow p-6 max-w-2xl mx-auto relative">
-            <form class="relative z-10">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="md:col-span-2">
-                        <label class="block text-gray-700 mb-2">Nombre Completo</label>
-                        <input type="text" class="w-full border rounded-md p-2" required>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2">Tipo de Documento</label>
-                        <select class="w-full border rounded-md p-2" required>
-                            <option value="">Seleccione</option>
-                            <option>Cédula de Ciudadanía</option>
-                            <option>Cédula de Extranjería</option>
-                            <option>Pasaporte</option>
-                            <option>Tarjeta de Identidad</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2">Número de Documento</label>
-                        <input type="text" class="w-full border rounded-md p-2" required>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2">Celular</label>
-                        <input type="tel" class="w-full border rounded-md p-2" required>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2">Correo Electrónico</label>
-                        <input type="email" class="w-full border rounded-md p-2" required>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2">Nombre de Usuario</label>
-                        <input type="text" class="w-full border rounded-md p-2" required>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2">Contraseña</label>
-                        <input type="password" class="w-full border rounded-md p-2" required>
-                    </div>
-                    <div class="md:col-span-2">
-                        <label class="flex items-center">
-                            <input type="checkbox" class="rounded border-gray-300 text-red-600" required>
-                            <span class="ml-2 text-gray-700">Acepto el tratamiento de datos personales según la política de privacidad</span>
-                        </label>
-                    </div>   
+    <!-- Formulario flotante -->
+    <div class="relative max-w-2xl w-full bg-white rounded-3xl shadow-2xl p-10 fade-in overflow-hidden">
+
+        <h2 class="text-center text-2xl font-bold text-green-800 mb-2 relative z-10">Registro de Usuario</h2>
+        <p class="text-center text-gray-600 mb-8 relative z-10">Complete sus datos para registrarse</p>
+
+        <form class="relative z-10">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+                <div class="md:col-span-2">
+                    <label class="block text-gray-700 font-medium mb-2">Nombre Completo</label>
+                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
                 </div>
-                <div class="mt-6">
-                    <div class="flex justify-center">
-                        <button type="submit" class="bg-red-600 text-white py-2 rounded-md hover:bg-red-700 min-w-[10rem]">
-                            Registrarse
-                        </button>
-                        <button type="button" class="ml-4 bg-gray-600 text-white py-2 rounded-md hover:bg-gray-700 min-w-[10rem]">
-                            Cancelar
-                        </button>
-                    </div>
+
+                <div>
+                    <label class="block text-gray-700 font-medium mb-2">Tipo de Documento</label>
+                    <select class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                        <option value="">Seleccione</option>
+                        <option>Cédula de Ciudadanía</option>
+                        <option>Cédula de Extranjería</option>
+                        <option>Pasaporte</option>
+                        <option>Tarjeta de Identidad</option>
+                    </select>
                 </div>
-            </form>
-        </div>
-    </main>
+
+                <div>
+                    <label class="block text-gray-700 font-medium mb-2">Número de Documento</label>
+                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                </div>
+
+                <div>
+                    <label class="block text-gray-700 font-medium mb-2">Celular</label>
+                    <input type="tel" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                </div>
+
+                <div>
+                    <label class="block text-gray-700 font-medium mb-2">Correo Electrónico</label>
+                    <input type="email" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                </div>
+
+                <div>
+                    <label class="block text-gray-700 font-medium mb-2">Nombre de Usuario</label>
+                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                </div>
+
+                <div>
+                    <label class="block text-gray-700 font-medium mb-2">Contraseña</label>
+                    <input type="password" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                </div>
+
+                <div class="md:col-span-2">
+                    <label class="flex items-center text-gray-700">
+                        <input type="checkbox" class="rounded border-gray-300 text-green-500 focus:ring-green-500" required>
+                        <span class="ml-2">Acepto el tratamiento de datos personales según la política de privacidad</span>
+                    </label>
+                </div>
+            </div>
+
+            <div class="mt-6 flex justify-center gap-4">
+                <button type="submit" class="bg-green-600 hover:bg-blue-600 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105 min-w-[10rem]">
+                    Registrarse
+                </button>
+                <button type="button" class="bg-gray-600 hover:bg-gray-700 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105 min-w-[10rem]">
+                    Cancelar
+                </button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
