--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <style>
+
       body {
         font-family: "Roboto", sans-serif;
       }
@@ -69,11 +70,6 @@
       <div class="flex flex-row space-x-2 mt-3 sm:mt-0 w-full sm:w-auto justify-center sm:justify-end" 
            style="white-space: nowrap; min-width: 100px; margin-top: 1rem;">
 
-        <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 left-4 z-50 md:hidden" style="margin-top: -10px;">
-          ☰
-        </button>
-
-
         <button onclick="window.location.href='Paginas/inicioSesion.html'" 
           class="px-3 py-1 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition duration-200">
           Iniciar sesión
@@ -82,17 +78,21 @@
           class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700 transition duration-200">
           Registrarse
         </button>
+                <!-- Botón hamburguesa visible solo en móviles -->
+        <button id="menu-toggle" class="md:hidden p-2 text-white bg-gray-800">
+          &#9776; <!-- Icono hamburguesa -->
+        </button>
       </div>
     </div>
   </div>
 </header>
 
-      <!-- Navegación pestañas -->
-      <nav class="tabs px-6" style="margin-top: 1rem; font-size: 17px; margin-top: 0.5rem;">
-        <button class="active" data-tab="obra-negra">Obra Negra</button>
-        <button data-tab="obra-blanca">Obra Blanca</button>
-        <button data-tab="mantenimiento">Mantenimiento</button>
-      </nav>
+  <!-- Navegación pestañas -->
+  <nav class="tabs px-6 mt-2 text-base md:text-lg flex flex-col sm:flex-row sm:gap-4 gap-2">
+    <button class="active" data-tab="obra-negra">Obra Negra</button>
+    <button data-tab="obra-blanca">Obra Blanca</button>
+    <button data-tab="mantenimiento">Mantenimiento</button>
+  </nav>
 
       <!-- Main content area -->
       <main
