--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -18,7 +18,7 @@
   <!-- Servicios -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-    <a href="../Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Portafolio</a>
+    <a href="JB-CONSTRUCCIONES//Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Portafolio</a>
     <a href="../Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Blogs</a>
     <a href="../Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Cotizaciones</a>
     <a href="../Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Mensajes</a>
