--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -28,7 +28,7 @@
   <!-- Administrador -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-    <a href="../Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Gestionar Proyectos</a>
+    <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Gestionar Proyectos</a>
     <a href="../Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Moderación de Reseñas</a>
   </div>
 </aside>
